--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "mongoose": "^8.3.0",
     "next": "14.1.4",
     "query-string": "^9.0.0",
+    "radix-ui": "^1.0.1",
     "react": "^18",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
+    "stripe": "^14.25.0",
     "svix": "^1.21.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
