--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@stripe/stripe-js": "^3.3.0",
     "@uploadthing/react": "^6.0.2",
+    "babel-eslint": "^10.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.365.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
-    "next": "14.1.4",
+    "next": "^14.1.4",
     "query-string": "^9.0.0",
     "radix-ui": "^1.0.1",
     "react": "^18",
@@ -37,6 +38,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
